# rm-pokemon

./: Cargo.toml  Cross.toml  LICENSE  README.md  build.rs  build.sh
.github/workflows/: release.yml
src/: main.rs
